# GIMI-Manager

./: .gitignore  CMakeLists.txt  README.md
src/: dx11.cpp  main.cpp  utils.cpp  vulkan.cpp
src/database/: ini_manager.cpp
src/database/headers/: ini_manager.hpp
src/headers/: dx11.h  dx11.hpp  main.h  main.hpp  utils.hpp  vulkan.h  vulkan.hpp
src/windows/: another.cpp  demo.cpp  file_move_test.cpp  hello_world.cpp  modals.cpp  mods_list.cpp  mods_zip_list.cpp
src/windows/headers/: another.h  another.hpp  demo.h  demo.hpp  file_move_test.hpp  hello_world.h  hello_world.hpp  modals.hpp  mods_list.hpp  mods_zip_list.hpp  windows.h  windows.hpp
